Fixing vertical align for privacy toggler when element is a link

--- a/app/assets/stylesheets/common/privacy_toggler.css.scss
+++ b/app/assets/stylesheets/common/privacy_toggler.css.scss
@@ -12,6 +12,7 @@
   border: 1px solid $cStructure-softLine;
   border-radius: 40px;
   font-size: 16px;
+  line-height: 40px;
   text-align: center;
   vertical-align: middle;
 
